# rns-package-manager

./: .gitignore  README.md  client.py  colors.py  common.py  pyproject.toml  requirements.txt  rns-host.py  rns-pkg.py  server.py
rns_package_manager/: __init__.py  common.py  host.py  pkg.py
