[project]
name = "rns-package-manager"
version = "0.1.0"
description = ""
authors = [
    {name = "Ivan"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "rns (>=0.9.3,<0.10.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
